--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,16 @@ body {
   margin-bottom: 21px;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type='number'] {
+  -moz-appearance:textfield;
+}
+
 @media screen and (min-width: 600px) and (max-width: 899px) {
   /* Tablet */
 }
