--- a/css/calculator.css
+++ b/css/calculator.css
@@ -30,9 +30,8 @@
 }
 
 .calculator__range-input {
-  width: 64%;
+  width: 59%;
   margin-top: 8px;
-  padding-left: 11px;
 }
 
 .calculator__input-container {
@@ -40,6 +39,7 @@
   align-items: center;
   margin-top: -5px;
   justify-content: space-between;
+  margin-bottom: 14px;
 }
 
 .calculator__direct-slider-input {
@@ -60,4 +60,8 @@
   font-size: 14px;
   font-weight: 400;
   color: #3E3D3F;
+}
+
+.calculator--reference-first {
+  width: 7.55%;
 }
