--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ input[type='number'] {
   -moz-appearance:textfield;
 }
 
+main {
+  padding-bottom: 20px;
+}
+
 @media screen and (min-width: 780px) {
   main {
     justify-content: center;
