--- a/css/calculator.css
+++ b/css/calculator.css
@@ -80,7 +80,7 @@
 
 .calculator__input-number {
   display: block;
-  border: 1px solid #333;
+  border: 1px solid #A6A6A6;
   height: 42px;
   margin-top: 3px;
   width: 100%;
@@ -91,6 +91,12 @@
   color: #3E3D3F;
   line-height: 14px;
   padding-left: 26px;
+  outline: 0;
+}
+
+.calculator__input-number:focus {
+  border-color: #3E3D3F;
+  box-shadow: 0 0 4px rgba(0,0,0,.62);
 }
 
 .calculator--error {
@@ -143,6 +149,7 @@
   font-size: 14px;
   font-weight: 700;
   letter-spacing: .6px;
+  outline: 0;
 }
 
 @media screen and (min-width: 780px){
