--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,24 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Roman.otf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Thin.otf');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Helvetica Neue';
+  src: url('../fonts/HelveticaNeue-Heavy.otf');
+  font-weight: 700;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -60,3 +78,450 @@ main {
     margin-bottom: 25px;
   }
 }
+
+/**
+ * Results styles
+ */
+
+ .results {
+  position: relative;
+  width: 93.5%;
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 9px 20px 8px;
+  z-index: 1;
+  margin-top: -5px;
+  background: #EAF6FA;
+  padding-top: 13px;
+  max-width: 470px;
+  transform: translateY(-100%);
+}
+
+.results--animate {
+  transform: translateY(0);
+  animation-name: showResults;
+  animation-duration: .5s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes showResults {
+  from { 
+    transform: translateY(-100%)
+  }
+  to { 
+    transform: translateY(0)
+  }
+}
+ 
+.results__title {
+  font-family: 'Helvetica Neue';
+  font-size: 20px;
+  font-weight: 400;
+  color: #3E3D3F;
+  letter-spacing: .21px;
+}
+
+.results__row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.results--text-group {
+  border-bottom: 1px solid #B2B2B2;
+  align-items: center;
+}
+
+.results--text-group:last-child {
+  border-bottom: 0;
+}
+
+.results__category-text {
+  font-family: 'Helvetica Neue';
+  font-size: 12px;
+  font-weight: 300;
+  color: #3E3D3F;
+  letter-spacing: .21px;
+}
+
+.results__category-result {
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 300;
+  color: #3E3D3F;
+  letter-spacing: .21px;
+}
+
+.results--no-calc {
+  opacity: .2;
+}
+
+.results--big-font {
+  font-size: 18px;
+  font-weight: 700;
+}
+
+@media screen and (min-width: 780px){
+  .results {
+    margin: 0;
+    width: 298px;
+    max-width: 298px;
+    margin-left: -21px;
+    margin-right: 17px;
+    padding-left: 59px;
+    padding-right: 43px;
+    transform: translateY(0);
+  }
+
+  .results__title {
+    font-size: 26px;
+    margin-bottom: 37px;
+  }
+
+  .results__category-text {
+    font-weight: 400;
+    letter-spacing: 0;
+    font-size: 14px;
+    margin-bottom: 6px;
+  }
+
+  .results__category-result {
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 0;
+  }
+
+  .results--big-font {
+    font-size: 22px;
+  }
+
+  .results--big-font--only-desktop {
+    font-size: 18px;
+  }
+
+  .results--text-group {
+    padding-left: 6px;
+    border-bottom: 0;
+    display: block;
+    margin-bottom: 31px;
+  }
+
+  .results--border-bottom {
+    border-bottom: 1px solid #CBCBCB;
+    padding-bottom: 5px;
+    margin-bottom: 26px;
+  }
+
+  .results--no-padding {
+    padding-left: 4px;
+  }
+  
+}
+
+/* Styles for input range */
+
+.calculator__range-input {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 8px 0;
+}
+.calculator__range-input:focus {
+  outline: none;
+}
+.calculator__range-input::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #cacaca;
+  border-radius: 5px;
+  border: 0px solid #010101;
+}
+.calculator__range-input::-webkit-slider-thumb {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
+  border: 0px solid #000000;
+  height: 24px;
+  width: 24px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+.calculator__range-input:focus::-webkit-slider-runnable-track {
+  background: #ebebeb;
+}
+.calculator__range-input::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  background: #cacaca;
+  border-radius: 5px;
+  border: 0px solid #010101;
+}
+.calculator__range-input::-moz-range-thumb {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
+  border: 0px solid #000000;
+  height: 24px;
+  width: 24px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.calculator__range-input::-ms-track {
+  width: 100%;
+  height: 24px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+.calculator__range-input::-ms-fill-lower {
+  background: #a9a9a9;
+  border: 0px solid #010101;
+  border-radius: 0 5px 5px 0;
+}
+.calculator__range-input::-ms-fill-upper {
+  background: #cacaca;
+  border: 0px solid #010101;
+  border-radius: 0 5px 5px 0;
+}
+.calculator__range-input::-ms-thumb {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
+  border: 0px solid #000000;
+  height: 24px;
+  width: 24px;
+  border-radius: 50px;
+  background: #ffffff;
+  cursor: pointer;
+}
+.calculator__range-input:focus::-ms-fill-lower {
+  background: #cacaca;
+}
+.calculator__range-input:focus::-ms-fill-upper {
+  background: #ebebeb;
+}
+
+/**
+ * Calculator styles
+ */
+
+ .calculator {
+  position: relative;
+  clear: both;
+  width: 93.5%;
+  margin: 0 auto;
+  border-radius: 4px;
+  padding: 9px 20px 18px;
+  z-index: 2;
+  background: white;
+  box-shadow: 0 2px 4px rgba(0,0,0,.5);
+  max-width: 470px;
+}
+
+.calculator__title {
+  font-family: 'Helvetica Neue';
+  font-size: 12px;
+  font-weight: 400;
+  color: #3E3D3F;
+  letter-spacing: .21px;
+  padding-bottom: 7px;
+  border-bottom: 1px solid #cacaca;
+}
+
+.calculator__form {
+  padding-top: 9px;
+}
+
+.calculator__input-label {
+  font-family: 'Helvetica Neue';
+  font-size: 12px;
+  font-weight: 700;
+  color: #3E3D3F;
+  letter-spacing: .16px
+}
+
+.calculator__range-input {
+  width: 59%;
+  margin-top: 8px;
+}
+
+.calculator__input-container {
+  display: flex;
+  align-items: center;
+  margin-top: -5px;
+  justify-content: space-between;
+  margin-bottom: 14px;
+}
+
+.calculator--increased-bottom-margin {
+  margin-bottom: 21px;
+}
+
+
+.calculator__direct-slider-input {
+  height: 42px;
+  width: 20%;
+  border: 1px solid #A6A6A6;
+  border-radius: 6px;
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 400;
+  color: #0D0D0D;
+  text-align: center;
+}
+
+.calculator__reference-value {
+  margin: 0;
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 400;
+  color: #3E3D3F;
+}
+
+.calculator--reference-first {
+  width: 7.55%;
+}
+
+.calculator__input-with-fixed-text {
+  position: relative;
+}
+
+.calculator__input-number {
+  display: block;
+  border: 1px solid #A6A6A6;
+  height: 42px;
+  margin-top: 3px;
+  width: 100%;
+  border-radius: 6px;
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 400;
+  color: #3E3D3F;
+  line-height: 14px;
+  padding-left: 26px;
+  outline: 0;
+}
+
+.calculator__input-number:focus {
+  border-color: #3E3D3F;
+  box-shadow: 0 0 4px rgba(0,0,0,.62);
+}
+
+.calculator--error {
+  border-color: #DA3535;
+} 
+
+.calculator__error-message {
+  font-family: 'Helvetica Neue';
+  font-size: 10px;
+  font-weight: 700;
+  color: #DA3535;
+  display: none;
+}
+
+.calculator--show {
+  display: block;
+}
+
+.calculator__input-number-fixed-text {
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 400;
+  color: #3E3D3F;
+  position: absolute;
+  line-height: 14px;
+  top: 15px;
+  left: 15px;
+}
+
+.calculator__row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 21px;
+}
+
+.calculator__column {
+  width: 46.5%;
+}
+
+.calculator__submit {
+  display: block;
+  width: 100%;
+  background: #0077C0;
+  margin-top: 18px;
+  height: 42px;
+  border-radius: 6px;
+  border: 0;
+  color: white;
+  font-family: 'Helvetica Neue';
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: .6px;
+  outline: 0;
+}
+
+@media screen and (min-width: 780px){
+  .calculator {
+    margin: 0;
+    padding: 24px 38px 39px;
+  }
+
+  .calculator__title {
+    font-size: 16px;
+    letter-spacing: .4px;
+    padding-bottom: 13px;
+    margin-bottom: 27px;
+  }
+
+  .calculator__input-label {
+    font-size: 14px;
+  }
+
+  .calculator__form {
+    padding-left: 4px;
+  }
+
+  .calculator__direct-slider-input {
+    /* Cambiar clase */
+    width: 15.5%;
+    height: 46px;
+  }
+
+  .calculator__range-input {
+    width: 67.5%;
+    margin-left: -17px;
+  }
+
+  .calculator__reference-value {
+    font-size: 16px;
+  }
+
+  .calculator--reference-second {
+    margin-left: -10px;
+  }
+
+  .calculator__input-container {
+    margin-bottom: 20px;
+  }
+
+  .calculator__input-number {
+    height: 46px;
+    font-size: 16px;
+    padding-left: 37px;
+  }
+
+  .calculator__column {
+    width: 47.5%;
+  }
+
+  .calculator__input-number-fixed-text {
+    font-size: 16px;
+    left: 24px;
+  }
+
+  .calculator__submit {
+    font-size: 16px;
+    margin-top: 19px;
+    height: 45px;
+  }
+}
+
