--- a/css/styles.css
+++ b/css/styles.css
@@ -223,6 +223,15 @@ main {
   -webkit-appearance: none;
   width: 100%;
   margin: 8px 0;
+  border-radius: 6px;
+  height: 6px;
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      right top,
+      color-stop(0, #1091CC),
+      color-stop(0, #CACACA)
+  );
 }
 .calculator__range-input:focus {
   outline: none;
@@ -231,12 +240,11 @@ main {
   width: 100%;
   height: 8px;
   cursor: pointer;
-  background: #cacaca;
   border-radius: 5px;
   border: 0px solid #010101;
 }
 .calculator__range-input::-webkit-slider-thumb {
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), 0px 0px 1px rgba(13, 13, 13, 0.5) ;
   border: 0px solid #000000;
   height: 24px;
   width: 24px;
@@ -246,14 +254,10 @@ main {
   -webkit-appearance: none;
   margin-top: -8px;
 }
-.calculator__range-input:focus::-webkit-slider-runnable-track {
-  background: #ebebeb;
-}
 .calculator__range-input::-moz-range-track {
   width: 100%;
   height: 8px;
   cursor: pointer;
-  background: #cacaca;
   border-radius: 5px;
   border: 0px solid #010101;
 }
@@ -275,7 +279,7 @@ main {
   color: transparent;
 }
 .calculator__range-input::-ms-fill-lower {
-  background: #a9a9a9;
+  background: #1091CC;
   border: 0px solid #010101;
   border-radius: 0 5px 5px 0;
 }
@@ -294,7 +298,7 @@ main {
   cursor: pointer;
 }
 .calculator__range-input:focus::-ms-fill-lower {
-  background: #cacaca;
+  background: #1091CC;
 }
 .calculator__range-input:focus::-ms-fill-upper {
   background: #ebebeb;
