--- a/css/styles.css
+++ b/css/styles.css
@@ -129,14 +129,6 @@ main {
   width: 100%;
   margin: 8px 0;
   border-radius: 6px;
-  height: 6px;
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      right top,
-      color-stop(0, #1091CC),
-      color-stop(0, #CACACA)
-  );
 }
 .calculator__range-input:focus {
   outline: none;
@@ -201,6 +193,7 @@ main {
   border-radius: 50px;
   background: #ffffff;
   cursor: pointer;
+  margin-top: 0px;
 }
 .calculator__range-input:focus::-ms-fill-lower {
   background: #1091CC;
