--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ main {
 /* Styles for input range */
 
 .calculator__range-input {
+  outline: 0;
   -webkit-appearance: none;
   width: 100%;
   margin: 8px 0;
@@ -148,6 +149,12 @@ main {
  .calculator--edge1314 {
      background-image: none;
  }
+}
+@-moz-document url-prefix() {
+  /* FF styles */
+  .calculator__range-input {
+    height: 8px;
+  }
 }
 .calculator__range-input:focus {
   outline: none;
@@ -173,7 +180,7 @@ main {
 }
 .calculator__range-input::-moz-range-track {
   width: 100%;
-  height: 8px;
+  height: 0;
   cursor: pointer;
   border-radius: 5px;
   border: 0px solid #010101;
@@ -289,6 +296,7 @@ main {
   font-weight: 400;
   color: #0D0D0D;
   text-align: center;
+  background: white;
 }
 
 .calculator__reference-value {
